<resources>
    <string name="app_name">Pojav Glow·Worm</string>
    <string name="app_short_name">Pojav Glow·Worm</string>
    <string name="login_online_username_hint">Username</string>
    <string name="login_online_login_label">Login</string>
    <string name="hint_control_mapping">"Tap the top center cog icon to open the context menu ⚙\nTap a button to customize: edit, resize, delete, or customize it's keybind."</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">Pojav Glow·Worm has unexpectedly crashed</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success">Install successful</string>
    <string name="mcl_tab_wiki">Github</string>
    <string name="mcl_launch_cleancache">Cleaning cache files</string>
    <string name="mcl_launch_downloading">Downloading %s</string>
    <string name="mcl_launch_downloading_progress">"Downloading %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Preparing to download resources</string>
    <string name="mcl_options">Options</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - (all versions, fast)</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - (all versions, mid)</string>
    <string name="mcl_setting_renderer_angle">ANGLE (Vulkan) - (1.17+ only, mid)</string>
    <string name="mcl_setting_veroption_release">Release</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-beta</string>
    <string name="mcl_setting_java_sandbox">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_version_clone">Clone</string>
    <string name="global_edit">Edit</string>
    <string name="global_error">Error</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_remove">Remove</string>
    <string name="global_clone">Clone</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="global_waiting">Wait</string>
    <string name="global_select">Select</string>
    <string name="global_retry">Retry</string>
    <string name="global_default">Default</string>
    <string name="mcn_exit_title">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="mcn_check_fail_vulkan_support">Zink (Vulkan) renderer is not supported on this device!</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="import_control_label">Import controls</string>
    <string name="import_control_invalid_file">Invalid or corrupted file</string>
    <string name="import_control_import_button">import controls</string>
    <string name="import_control_verifying_file">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name">Invalid name or file already exists</string>
    <string name="import_control_done">Importation done</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background color</string>
    <string name="customctrl_corner_radius">Corner radius</string>
    <string name="customctrl_stroke_width">Stroke width</string>
    <string name="customctrl_stroke_color">Stroke color</string>
    <string name="main_share_logs">Share log file</string>
    <string name="main_install_jar_file">Execute a .jar</string>
    <string name="main_play">Play</string>
    <string name="mcl_setting_check_libraries">Check libraries after downloading</string>
    <string name="mcl_setting_check_libraries_subtitle">This option forces the launcher to check the library hash if it\'s available. Prevents broken downloads.</string>
    <string name="preference_force_english_title">Force language to English</string>
    <string name="preference_force_english_description">Allows you to see original strings, as intended by developers. Requires a restart.</string>
    <string name="arc_capes_title">Cosmetica Capes</string>
    <string name="arc_capes_desc">Enables capes from Cosmetica (previously Arc). For more information please visit https://cosmetica.cc. Requires OptiFine.</string>
    <string name="preference_shader_dump_title">Enable shader dumping</string>
    <string name="preference_shader_dump_description">Log converted shaders into the log file.</string>
    <string name="preference_force_big_core_title">Force the renderer to run on the big core</string>
    <string name="preference_force_big_core_desc">Forces the Minecraft render thread to run on the core with the highest maximum frequency.</string>
    <string name="preference_vulkan_driver_system_title">Use system Vulkan driver</string>
    <string name="preference_vulkan_driver_system_description">Force the launcher to use the system Vulkan driver instead of Turnip on Adreno GPUs. Only affects Zink and mods that use Vulkan.</string>
    <string name="preference_download_source_title">Game download source</string>
    <string name="preference_download_source_description">Select a download mirror instead of using the official download server</string>
    <string name="preference_verify_manifest_title">Verify game version manifest</string>
    <string name="preference_verify_manifest_description">When enabled, the launcher will check the game version manifest along with the libraries.</string>
    <string name="preference_category_experimental_settings">Experimental fuckury</string>
    <string name="preference_category_miscellaneous">Miscellaneous settings</string>
    <string name="preference_enable_log_output_desc">Enable the log output interface when the application officially starts running the game</string>
    <string name="preference_enable_log_output_title">Enable log output on game startup</string>
    <string name="preference_mouse_title">Mouce customization</string>
    <string name="preference_mouse_description">Set mouse pointer icon in game</string>
    <string name="preference_mouse_title1">Remove mouse icon</string>
    <string name="preference_quit_launcher_title">Quit Launcher</string>
    <string name="preference_quit_launcher">Exit the launcher when the running the game</string>
    <string name="main_terminal">Terminal</string>
    <string name="global_return">Return</string>
    <string name="global_refresh">Refresh</string>
    <string name="preference_category_renderer_experimental_settings">Renderer exp setup</string>
    <string name="preference_renderer_setup_title">Enable Renderer Exp Setup</string>
    <string name="preference_renderer_setup">Use more renderer-specific settings</string>
    <string name="preference_spare_bridge_title">Spare Bridge</string>
    <string name="preference_spare_bridge">Use the second scheme bridge,close if launch failed</string>
    <string name="preference_spare_framebuffer_title">Spare frame buffer</string>
    <string name="preference_spare_framebuffer">Use the frame buffer of the second scheme, close it if launch failed</string>
    <string name="preference_renderer_setup_extra">Renderer (Extra)</string>
    <string name="preference_extra_mesa_version">Mesa Version</string>
    <string name="preference_extra_driver_model">Driver Modle</string>
    <string name="preference_exp_custommv">GL/GLSL Version</string>
    <string name="preference_exp_ebsystem">Select according to system</string>
    <string name="preference_exp_ebspecific">Use specific version</string>
    <string name="preference_rendererexp_custom_glversion_title">Custom GL/GLSL</string>
    <string name="preference_rendererexp_custom_glversion">Allow custom Mesa GL/GLSL version</string>
    <string name="profiles_path_title">Game Path Management</string>
    <string name="profiles_path_create_new">Add New Path</string>
    <string name="zh_setting_set_game_language_desc">Automatically set the game language to the selected language when the game starts</string>
    <string name="zh_setting_set_game_language_title">Automatically Set Game Language</string>
    <string name="zh_setting_set_game_language_list">Set Game Language</string>
    <string name="zh_setting_set_game_language_overridden_title">Override Game Language</string>
    <string name="zh_setting_set_game_language_overridden_desc">Ignore the language set in the game and force it to the game language set in the launcher</string>
    <string name="preference_extra_mesa_download">Download Mesa Lib</string>
</resources>