<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/preference_category_miscellaneous">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_setting_hash_verification"
            android:key="checkLibraries"
            android:summary="@string/mcl_setting_check_libraries_subtitle"
            android:title="@string/mcl_setting_check_libraries" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="arc_capes"
            android:summary="@string/arc_capes_desc"
            android:title="@string/arc_capes_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="enableLogOutput"
            android:summary="@string/preference_enable_log_output_desc"
            android:title="@string/preference_enable_log_output_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="quitLauncher"
            android:summary="@string/preference_quit_launcher"
            android:title="@string/preference_quit_launcher_title" />
        <androidx.preference.ListPreference
            android:defaultValue="default"
            android:key="downloadSource"
            android:entries="@array/download_source_names"
            android:entryValues="@array/download_source_values"
            android:title="@string/preference_download_source_title"
            android:summary="@string/preference_download_source_description"
            app2:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="autoSetGameLanguage"
            android:summary="@string/zh_setting_set_game_language_desc"
            android:title="@string/zh_setting_set_game_language_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="gameLanguageOverridden"
            android:summary="@string/zh_setting_set_game_language_overridden_desc"
            android:title="@string/zh_setting_set_game_language_overridden_title"/>
        <androidx.preference.ListPreference
            android:key="setGameLanguage"
            android:entries="@array/all_game_language"
            android:entryValues="@array/all_game_language_value"
            android:title="@string/zh_setting_set_game_language_list"
            android:defaultValue="system"
            app2:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"/>

    </PreferenceCategory>
    <Preference
            android:key="control_mouse_setting"
            android:title="@string/preference_mouse_title"
            android:summary="@string/preference_mouse_description"
            android:icon="@drawable/ic_mouse_editor"
    />

    <Preference
            android:key="control_mouse_remove"
            android:title="@string/preference_mouse_title1"
    />
</PreferenceScreen>
