<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     android:gravity="top"
     android:background="@color/background_app"
     android:orientation="vertical"
     android:id="@+id/fragment_menu_main">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/mc_version_spinner">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/news_button"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_66sdp"
				android:background="?android:attr/selectableItemBackground"

				android:text="@string/mcl_tab_wiki"
				android:drawableStart="@drawable/ic_menu_news"

				/>

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/custom_control_button"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_66sdp"
				android:background="?android:attr/selectableItemBackground"
				android:drawableStart="@drawable/ic_menu_custom_controls"
				android:text="@string/mcl_option_customcontrol"
				app:layout_constraintTop_toBottomOf="@id/news_button"

				/>

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/install_jar_button"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_66sdp"
				android:background="?android:attr/selectableItemBackground"
				android:drawableStart="@drawable/ic_menu_install_jar"
				android:text="@string/main_install_jar_file"

				app:layout_constraintTop_toBottomOf="@id/custom_control_button"
				/>

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/start_terminal_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_66sdp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_terminal"
                android:text="@string/main_terminal"

                app:layout_constraintTop_toBottomOf="@id/install_jar_button"
                />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/share_logs_button"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_66sdp"
				android:background="?android:attr/selectableItemBackground"
				android:drawableStart="@android:drawable/ic_menu_share"
				android:text="@string/main_share_logs"

				app:layout_constraintTop_toBottomOf="@id/install_jar_button"
				/>
		</LinearLayout>
	</ScrollView>

    <com.kdt.mcgui.mcVersionSpinner
         android:layout_height="@dimen/_52sdp"
         android:layout_width="0dp"
         android:background="@android:color/transparent"
         app:drawableStartSize="@dimen/_36sdp"
         app:drawableStartIntegerScaling="true"
         android:drawableEnd="@drawable/spinner_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:drawableEndPadding="@dimen/_1sdp"
         app:layout_constraintEnd_toStartOf="@+id/edit_profile_button"
         app:layout_constraintBottom_toTopOf="@id/play_button"
         app:drawableEndSize="@dimen/padding_heavy"
         android:id="@+id/mc_version_spinner" />

    <ImageButton
         android:layout_height="@dimen/_52sdp"
         android:layout_width="@dimen/_52sdp"
         android:src="@drawable/ic_edit_profile"
         android:background="?android:attr/selectableItemBackground"
         app:layout_constraintTop_toTopOf="@+id/mc_version_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/mc_version_spinner"
         android:id="@+id/edit_profile_button" />

    <View
         android:layout_height="0dp"
         android:layout_width="match_parent"
         android:background="@color/background_bottom_bar"
         app:layout_constraintTop_toTopOf="@id/mc_version_spinner"
         android:translationZ="-1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/_background_display_view" />

    <com.kdt.mcgui.MineButton
         android:layout_height="@dimen/_62sdp"
         android:layout_width="match_parent"
         android:layout_marginBottom="@dimen/_15sdp"
         android:layout_marginHorizontal="@dimen/_17sdp"
         android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/play_button"
         android:text="@string/main_play" />

</androidx.constraintlayout.widget.ConstraintLayout>